# desafio-dafiti

./: .gitignore  .isort.cfg  .pylintrc  Dockerfile  README.MD  db.sqlite3  docker-compose.yml  fixtures.json  makefile  pyproject.toml  requirements.txt
blog/: manage.py  run.sh  unzip.py  waitconnection.py
blog/myblog/: admin.py  forms.py  models.py  test_blog.py  urls.py  views.py
blog/myblog/migrations/: 0001_initial.py  0001_squashed_0002_auto_20210325_2353.py  0001_squashed_0002_auto_20210326_0046.py  0001_squashed_0002_auto_20210327_1759.py  0002_auto_20210326_0046.py
blog/myblog/templates/: create_tag.html  create_update_post.html  index.html  index_tags.html  layout.html  post.html  search.html  sub_header.html
blog/myblog/templatetags/: blog_extratags.py
blog/mysite/: README.MD  settings.py  urls.py
myblog/: admin.py  forms.py  models.py  test_blog.py  urls.py  views.py
myblog/migrations/: 0001_initial.py  0001_squashed_0005_auto_20210312_2139.py  0002_auto_20210308_2159.py  0003_post_last_updated.py  0004_auto_20210311_1909.py
myblog/templates/: create_update_post.html  edit_post.html  index.html  layout.html  post.html
myblog/templatetags/: blog_extratags.py
mysite/: README.MD  settings.py  urls.py
polls/: admin.py  models.py  views.py
polls/migrations/: 0001_initial.py
static/ckeditor/ckeditor/: config.js
