[tool.isort]
    default_section = 'THIRDPARTY'
    known_django = 'django'
    src_paths = 'blog/'
    no_lines_before = 'LOCALFOLDER'
    skip = 'migrations'
    multi_line_output = 3
    include_trailing_comma = true
    use_parentheses = true
    honor_noqa = true
    # https://github.com/PyCQA/isort#custom-sections-and-ordering
    sections = ['FUTURE','STDLIB','DJANGO','THIRDPARTY','FIRSTPARTY','LOCALFOLDER']

[tool.pylint]
    [tool.pylint.master]
        ignore='CVS'
        jobs=1

    [tool.pylint.message_control]
        disable=['invalid-name',
                'missing-module-docstring',
                'missing-class-docstring',
                'missing-function-docstring'
                ]

    [tool.pylint.django_foreign_keys_referenced_by_strings]
        django-settings-module='mysite.settings'

    [tool.pylint.format]
        indent-after-paren=4
        indent-string='    '
        max-line-length=79

[tool.black]
    skip-string-normalization=true
    target-version=['py38']
    line-length=79
    exclude='/(\.git|\.venv|env|venv|build|dist)/'

[tool.pytest.ini_options]
    DJANGO_SETTINGS_MODULE='mysite.settings'
    addopts = '--strict-markers'
[tool.poetry]
name = "desafio-dafiti"
version = "0.1.0"
description = ""
authors = ["jplukas <jplukasavicus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
django-ckeditor = "^6.0.0"
Pillow = "^8.2.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint-django = "^2.4.3"
pytest-django = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
